WIP: stashing before publishing

--- a/package.json
+++ b/package.json
@@ -7,61 +7,10 @@
     "dist/"
   ],
   "browser": "dist/bolt.js",
-  "_scripts": {
-    "bootstrap": "lerna bootstrap --npm-client=yarn",
-    "build": "NODE_ENV=production webpack --optimize-minimize && gulp build --prod",
-    "changelog": "lerna-changelog",
-    "commitmsg": "validate-commit-msg",
-    "fix:scripts": "gulp scripts:fix",
-    "fix:scss": "gulp styles:fix",
-    "fix": "gulp fix",
-    "lint:fix": "eslint --fix ./build-tools",
-    "lint:js": "eslint ./build-tools",
-    "lint:md": "remark . --quiet --frail",
-    "lint:scss": "gulp styles:lint",
-    "clean:lerna": "lerna clean -Y",
-    "clean:git": "git clean -xdf",
-    "clean:all": "npm run clean:git && npm run clean:lerna",
-    "lint": "npm-run-all --parallel lint:* -c",
-    "mocha": "npm run mocha:settings && npm run mocha:build-tools",
-    "mocha:build-tools": "mocha ./build-tools/**/tests/*.test.js",
-    "mocha:settings": "mocha **/settings-*/tests/*.test.js",
-    "deploy": "node build-tools/build-slack/index.js",
-    "postinstall": "npm run bootstrap && npm run install:composer",
-    "prepublishOnly": "npm run snyk-protect",
-    "publish-beta": "lerna run build && lerna publish --npm-tag=beta --skip-git",
-    "publish-canary": "lerna run build && lerna run publish-please && lerna publish --canary --yes",
-    "publish-please": "publish-please",
-    "publish": "lerna run build && lerna run publish-please && lerna publish --no-git",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "start": "gulp",
-    "_setup": "npm run bootstrap && npm run setup:composer",
-    "install:composer": "if [ -f ./bolt-website/index.html ]; then rm ./bolt-website/index.html; fi && npm run setup:composer",
-    "setup:composer": "if [ ! -f ./bolt-website/index.html ]; then rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components && composer install --no-interaction --prefer-dist --no-dev; fi",
-    "setup:homebrew": "sh scripts/install-homebrew.sh",
-    "snyk-protect": "snyk protect",
-    "now-start": "serve ./bolt-website --single",
-    "postbuild": "NODE_ENV=production webpack --config webpack-module-build.config.js",
-    "polymer:dev": "webpack && BROWSERS=module webpack-dev-server --inline --config webpack-module-build.config.js",
-    "polymer:dev:module": "BROWSERS=module webpack-dev-server --inline",
-    "test:lighthouse": "concurrently --kill-others \"http-server dist\" \"lighthouse --view http://localhost:8080\" ",
-    "polymer:test:travis": "yarn pretest && yarn lint && wct",
-    "clean:lighthouse": "rm *.report.html",
-    "test:full": "yarn lint:scss && polymer test && yarn test:lighthouse && yarn lint:remark && npm run mocha",
-    "test": "polymer test && yarn test:lighthouse",
-    "test:ci": "node browserstack.js",
-    "pretest": "node scripts/check-imports.js && yarn linkbower && yarn build",
-    "posttest": "yarn rmbower",
-    "polymer:lint": "xo && stylelint src/components/**/*.postcss",
-    "polymer:lint:remark": "remark .",
-    "linkbower": "node scripts/link-bower.js",
-    "rmbower": "node scripts/link-bower.js remove",
-    "polymer:release": "standard-version"
-  },
   "scripts": {
     "backstop-test": "backstop test",
     "backstop-reference": "backstop reference",
-    "bootstrap": "lerna bootstrap --npm-client=yarn",
+    "bootstrap": "lerna bootstrap --npm-client=yarn --concurrency 12",
     "build": "NODE_ENV=production webpack --optimize-minimize && gulp build --prod",
     "build:icons": "npm run build --prefix src/components/bolt-icons",
     "lint:js": "eslint ./build-tools",
