WIP: adjusting button theme colors

--- a/.pattern-lab/config/config.yml
+++ b/.pattern-lab/config/config.yml
@@ -32,6 +32,7 @@ ishViewportRange:
   l:
     - 1000
     - 2600
+baseDir: /Users/sghoweri/sites/bolt/.pattern-lab/
 ishControlsHide:
   - hay
 styleguideKit: pattern-lab/styleguidekit-twig-default
