feat: ordered / unordered list + blockquote cleanup & docs

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ cache
 *.psb
 *.psd
 *.tmp
+dist
 
 ## installed to src/_twig-components via composer
 src/_twig-components
@@ -19,7 +20,7 @@ src/_patterns/**/dist
 src/_patterns/**/dist/*
 
 
-
+*.log
 lerna-debug.log
 node_modules
 bower_components
