--- a/src/_patterns/02-components/bolt-action-blocks/package.json
+++ b/src/_patterns/02-components/bolt-action-blocks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/components-action-block",
+  "name": "@bolt/components-action-blocks",
   "description": "Action Block Component in Bolt",
   "type": "pattern",
   "keywords": [
@@ -31,7 +31,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/action-block.scss",
+  "style": "src/action-blocks.scss",
   "publishConfig": {
     "access": "public"
   }
