WIP: moving utils to @bolt/core

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "gulp",
     "setup": "npm run bootstrap && npm run setup:composer",
     "setup:composer": "if [ ! -f ./bolt-website/index.html ]; then rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components && composer install --no-interaction --prefer-dist --no-dev; fi",
-    "test:travis": "yarn pretest && yarn lint && wct",
+    "test:travis": "yarn pretest && yarn lint",
     "test:lighthouse": "concurrently --kill-others \"http-server dist\" \"lighthouse --view http://localhost:8080\" ",
     "test:full": "yarn lint:scss && polymer test && yarn test:lighthouse && yarn lint:remark && npm run mocha",
     "test": "polymer test && yarn test:lighthouse",
@@ -79,7 +79,6 @@
   "dependencies": {
     "@bolt/config-stylelint": "0.3.1-alpha.4",
     "@bolt/eslint-config": "0.2.1-alpha.4",
-    "@kossnocorp/desvg": "0.2.0",
     "@skatejs/renderer-preact": "^0.1.0",
     "@times-components/brightcove-video": "^1.4.0",
     "@webcomponents/custom-elements": "1.0.4",
@@ -115,7 +114,6 @@
     "babylon": "^6.16.1",
     "backstopjs": "^3.0.31",
     "browser-sync": "^2.18.13",
-    "browserstack-local": "1.3.0",
     "camel-case": "^3.0.0",
     "chai": "^4.1.0",
     "chai-fs": "^1.0.0",
@@ -197,7 +195,6 @@
     "touch": "3.1.0",
     "uppercamelcase": "3.0.0",
     "validate-commit-msg": "^2.12.2",
-    "wct-browser-legacy": "0.0.1-pre.10",
     "web-component-refs": "0.0.2",
     "web-component-tester": "6.3.0",
     "webpack": "3.7.1",
