--- a/src/_patterns/02-components/bolt-icons/package.json
+++ b/src/_patterns/02-components/bolt-icons/package.json
@@ -52,6 +52,7 @@
   "jsnext:main": "dist/index.es6.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm run build",
     "build": "node ./build-icons.js && babel src --out-dir dist --ignore src/svgs"
   }
 }
