--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "backstop-test": "backstop test",
     "backstop-reference": "backstop reference",
     "bootstrap": "lerna bootstrap",
-    "build": "NODE_ENV=production webpack --optimize-minimize && gulp build --prod",
-    "build:icons": "npm run build --prefix src/components/bolt-icons",
-    "build:plicons": "npm run build:icons && lerna exec --scope @bolt/components-icon -- npm run build && lerna exec --scope @bolt/components-icon -- npm run copy:pl",
+    "_build": "NODE_ENV=production webpack --optimize-minimize && gulp build --prod",
+    "_build:icons": "npm run build --prefix src/components/bolt-icons",
+    "_build:plicons": "npm run build:icons && lerna exec --scope @bolt/components-icon -- npm run build && lerna exec --scope @bolt/components-icon -- npm run copy:pl",
     "lint:js": "eslint ./build-tools",
     "clean:lerna": "lerna clean -Y",
     "clean:git": "git clean -xdf",
@@ -23,17 +23,18 @@
     "mocha": "npm run mocha:settings && npm run mocha:build-tools",
     "mocha:build-tools": "mocha ./build-tools/**/tests/*.test.js",
     "mocha:settings": "mocha **/settings-*/tests/*.test.js",
-    "deploy": "node build-tools/build-slack/index.js",
+    "deploy": "node build-tools/gulp-tasks/build-slack/index.js",
     "publish": "lerna run build && lerna run publish-please && lerna publish --skip-git",
     "start": "gulp",
+    "build": "gulp build --prod && php core-console --generate",
     "setup": "npm run bootstrap && npm run setup:composer",
-    "setup:composer": "if [ ! -f ./bolt-website/index.html ]; then rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components && composer install --no-interaction --prefer-dist --no-dev; fi",
+    "setup:composer": "if [ ! -f ./dist/index.html ]; then rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components && composer install --no-interaction --prefer-dist --no-dev; fi",
     "test:travis": "yarn pretest && yarn lint",
     "test:lighthouse": "concurrently --kill-others \"http-server dist\" \"lighthouse --view http://localhost:8080\" ",
     "test:full": "yarn lint:scss && polymer test && yarn test:lighthouse && yarn lint:remark && npm run mocha",
     "test": "polymer test && yarn test:lighthouse",
     "test:ci": "node browserstack.js",
-    "pretest": "node scripts/check-imports.js && yarn build"
+    "pretest": "node build-tools/scripts/check-imports.js"
   },
   "pre-commit": [
     "test",
