--- a/build-tools/gulp-tasks/build-core/package.json
+++ b/build-tools/gulp-tasks/build-core/package.json
@@ -1,4 +1,26 @@
 {
+	"name": "@bolt/build-core",
+	"version": "0.4.0-rc.1",
+	"license": "MIT",
+	"description": "Build tools core",
+	"main": "index.js",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pega-digital/bolt.git"
+	},
+	"keywords": [
+		"bolt",
+		"bolt design system",
+		"build tools",
+		"gulp"
+	],
+	"maintainers": [
+		{
+			"name": "Salem Ghoweri",
+			"email": "me@salemghoweri.com",
+			"web": "https://github.com/sghoweri"
+		}
+	],
 	"dependencies": {
 		"browser-sync": "^2.18.12",
 		"child_process": "^1.0.2",
@@ -14,5 +36,9 @@
 		"merge": "^1.2.0",
 		"node-notifier": "^5.1.2",
 		"path": "^0.12.7"
-	}
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"private": false
 }
