--- a/src/_patterns/02-components/bolt-critical-fonts/package.json
+++ b/src/_patterns/02-components/bolt-critical-fonts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-critical-fonts",
-  "version": "0.4.0-rc.0",
+  "version": "0.4.0-rc.1",
   "description": "Async critical path font loader",
   "repository": {
     "type": "git",
@@ -16,14 +16,14 @@
   "author": "Salem Ghoweri",
   "license": "MIT",
   "devDependencies": {
-    "@bolt/build-webpack": "0.3.0-rc.0"
+    "@bolt/build-webpack": "0.3.0-rc.1"
   },
   "dependencies": {
-    "@bolt/elements-headings": "0.4.0-rc.0",
-    "@bolt/elements-page": "0.5.0-rc.0",
-    "@bolt/generic-all": "0.5.0-rc.0",
-    "@bolt/settings-all": "0.7.0-rc.0",
-    "@bolt/tools-all": "0.5.0-rc.0",
+    "@bolt/elements-headings": "0.4.0-rc.1",
+    "@bolt/elements-page": "0.5.0-rc.1",
+    "@bolt/generic-all": "0.5.0-rc.1",
+    "@bolt/settings-all": "0.7.0-rc.1",
+    "@bolt/tools-all": "0.5.0-rc.1",
     "fontfaceobserver": "^2.0.13"
   },
   "publishConfig": {
@@ -32,7 +32,7 @@
   "main": "src/critical-fonts.js",
   "style": "src/critical-fonts.css",
   "scripts": {
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry critical-fonts=./src/critical-fonts"
   }
 }
