--- a/src/_patterns/02-components/bolt-icons/package.json
+++ b/src/_patterns/02-components/bolt-icons/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.1.0-rc.0",
+  "version": "0.1.0-rc.1",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -52,7 +52,7 @@
   "jsnext:main": "dist/index.es6.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm run build",
+    "prepublishOnly": "npm run build",
     "build": "node ./build-icons.js && babel src --out-dir dist --ignore src/svgs"
   }
 }
