--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "deploy": "node build-tools/gulp-tasks/build-slack/index.js",
     "publish": "lerna run build && lerna run publish-please && lerna publish --skip-git",
     "start": "gulp",
-    "build": "gulp build --prod && php core-console --generate",
+    "build": "gulp build --prod",
     "setup": "npm run bootstrap && npm run setup:composer",
     "setup:composer": "if [ ! -f ./dist/index.html ]; then rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components && composer install --no-interaction --prefer-dist --no-dev; fi",
     "test:travis": "yarn pretest && yarn lint",
