fix: fixing mismatched webpack dependencies w/ Lerna - addresses issues w/ prepublish build script when publishing

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,8 @@ install:
 - npm install gulpjs/gulp#4.0
 - npm install --global now
 - npm install --global lerna
-- npm install && npm run bootstrap && npm run setup:composer
+- npm install --global webpack
+- npm install && npm run bootstrap && npm run composer:setup
 # - gem install --file packages/website-jekyll/Gemfile
 
 script:
