--- a/lerna.json
+++ b/lerna.json
@@ -14,7 +14,6 @@
     "cacheDir": ".changelog"
   },
   "packages": [
-    ".",
     "packages/**",
     "src",
     "src/**/*",
@@ -27,5 +26,13 @@
     "build-tools/gulp-tasks/build-styles",
     "build-tools/gulp-tasks/build-webpack",
     "build-tools/gulp-tasks/build-symlinks"
-  ]
+  ],
+  "command": {
+    "bootstrap": {
+      "nohoist": [
+        "node-pty",
+        "electron-rebuild"
+      ]
+    }
+  }
 }
