--- a/src/_patterns/02-components/bolt-icon/package.json
+++ b/src/_patterns/02-components/bolt-icon/package.json
@@ -34,6 +34,7 @@
     "@webcomponents/template": "^1.1.0",
     "@webcomponents/webcomponents-platform": "^1.0.0",
     "@webcomponents/webcomponentsjs": "^1.0.14",
+    "core-js": "^2.5.1",
     "npm-run-all": "^4.0.2"
   },
   "devDependencies": {
