--- a/src/_patterns/02-components/bolt-image/package.json
+++ b/src/_patterns/02-components/bolt-image/package.json
@@ -41,7 +41,7 @@
     "lazysizes": "^4.0.0-rc4"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "0.3.0-rc.1"
+    "@bolt/build-webpack": "^0.3.0-rc.2"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
