--- a/build-tools/gulp-tasks/build-webpack/package.json
+++ b/build-tools/gulp-tasks/build-webpack/package.json
@@ -44,7 +44,7 @@
 		"extract-text-webpack-plugin": "^3.0.2",
 		"fs-extra": "^4.0.2",
 		"gulp-util": "^3.0.8",
-		"merge": "^1.2.0",
+		
 		"node-sass-export": "github:bolt-design-system/node-sass-export",
 		"npm-sass": "^2.2.1",
 		"sass-loader": "^6.0.6",
@@ -54,6 +54,9 @@
 		"webpack-concat-plugin": "^1.4.1",
 		"webpack-dev-server": "^2.9.1",
 		"webpack-manifest-plugin": "^1.3.2"
+	},
+	"devDependencies": {
+		"merge": "^1.2.0"
 	},
 	"publishConfig": {
 		"access": "public"
