--- a/build-tools/gulp-tasks/package.json
+++ b/build-tools/gulp-tasks/package.json
@@ -31,7 +31,7 @@
     "@bolt/build-slack": "^0.3.0",
     "@bolt/build-styles": "^0.4.0-alpha.649a2b68",
     "@bolt/build-symlinks": "^0.3.0",
-    "@bolt/build-webpack": "^0.1.0",
+    "@bolt/build-webpack": "^0.3.0-rc.2",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^3.1.0",
     "gulp-changed-in-place": "^2.2.0",
