--- a/src/_patterns/01-core/04-elements/elements-all/package.json
+++ b/src/_patterns/01-core/04-elements/elements-all/package.json
@@ -36,13 +36,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/elements-code": "0.3.0-rc.0",
-    "@bolt/elements-headings": "0.4.0-rc.0",
-    "@bolt/elements-images": "0.3.0-rc.0",
-    "@bolt/elements-links": "0.5.0-rc.0",
-    "@bolt/elements-page": "0.5.0-rc.0",
-    "@bolt/elements-paragraphs": "0.2.0-rc.0",
-    "@bolt/elements-small": "0.5.0-rc.0",
-    "@bolt/elements-tables": "0.4.0-rc.0"
+    "@bolt/elements-code": "^0.3.0-rc.0",
+    "@bolt/elements-headings": "^0.4.0-rc.0",
+    "@bolt/elements-images": "^0.3.0-rc.0",
+    "@bolt/elements-links": "^0.5.0-rc.0",
+    "@bolt/elements-page": "^0.5.0-rc.0",
+    "@bolt/elements-paragraphs": "^0.2.0-rc.0",
+    "@bolt/elements-small": "^0.5.0-rc.0",
+    "@bolt/elements-tables": "^0.4.0-rc.0"
   }
 }
