--- a/src/_patterns/02-components/bolt-critical-fonts/package.json
+++ b/src/_patterns/02-components/bolt-critical-fonts/package.json
@@ -16,10 +16,10 @@
   "author": "Salem Ghoweri",
   "license": "MIT",
   "devDependencies": {
-    "@bolt/build-webpack": "0.3.0-rc.1"
+    "@bolt/build-webpack": "^0.3.0-rc.2"
   },
   "dependencies": {
-    "@bolt/elements-headings": "0.4.0-rc.1",
+    "@bolt/elements-headings": "^0.4.0-rc.1",
     "@bolt/elements-page": "0.5.0-rc.1",
     "@bolt/generic-all": "0.5.0-rc.1",
     "@bolt/settings-all": "0.7.0-rc.1",
