--- a/src/_data/package.json
+++ b/src/_data/package.json
@@ -7,5 +7,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/bolt-design-system/bolt"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
