fix: fixing build script so icons locally get auto built right before gulp gets run (at least via npm scripts)

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
 		"mocha:settings": "mocha **/settings-*/tests/*.test.js",
 		"deploy": "node build-tools/gulp-tasks/build-slack/index.js",
 		"publish": "lerna run build && lerna run publish-please && lerna publish --skip-git",
-		"start": "gulp",
-		"build": "gulp build --prod",
-		"build:full": "gulp build:full --prod",
+		"start": "lerna exec --scope @bolt/components-icons -- npm run build && gulp",
+		"build": "lerna exec --scope @bolt/components-icons -- npm run build && gulp build --prod",
+		"build:full": "lerna exec --scope @bolt/components-icons -- npm run build && gulp build:full --prod",
 		"setup": "npm run bootstrap && npm run composer:setup",
 		"composer:setup": "if [ ! -f ./dist/index.html ]; then npm run composer:clean && npm run composer:install; fi",
 		"composer:install": "composer install --prefer-source --no-interaction --no-dev",
