fix: fixing PL build so fonts load properly; cleaning up unused files

--- a/composer.json
+++ b/composer.json
@@ -101,7 +101,7 @@
           "forumone/starterkit-twig-drupal-gesso"
         ]
       },
-      "patches-file": "composer.patches-lite.json",
+      "patches-file": "composer.patches.json",
       "installer-types": ["patternlab-plugin"],
       "installer-paths": {
         "src/_twig-components": ["bolt/twig-extensions"]
