fix: removing snyk protect from prepare npm prepare task

--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "test": "npm run mocha",
     "test:ci": "node browserstack.js",
     "pretest": "node build-tools/scripts/check-imports.js",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "snyk-protect": "snyk protect"
   },
   "pre-commit": [
     "test",
