chore: fixing out of sync dependencies in prep for next release

--- a/src/_patterns/01-core/02-tools/tools-all/package.json
+++ b/src/_patterns/01-core/02-tools/tools-all/package.json
@@ -36,11 +36,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-breakpoint": "0.2.0-rc.1",
+    "@bolt/tools-breakpoint": "^0.2.0-rc.3",
     "@bolt/tools-button-color": "^0.5.0-rc.2",
     "@bolt/tools-clearfix": "^0.6.0-rc.2",
     "@bolt/tools-color-palette": "^0.5.0-rc.3",
-    "@bolt/tools-export-data": "0.6.0-rc.1",
+    "@bolt/tools-export-data": "^0.6.0-rc.3",
     "@bolt/tools-font-face": "^0.2.0-rc.2",
     "@bolt/tools-font-family": "^0.5.0-rc.2",
     "@bolt/tools-font-kerning": "^0.5.0-rc.2",
@@ -52,8 +52,8 @@
     "@bolt/tools-map-sort": "^0.2.0-rc.2",
     "@bolt/tools-no-select": "^0.5.0-rc.2",
     "@bolt/tools-poly-fluid-sizing": "^0.2.0-rc.2",
-    "@bolt/tools-px-to-rem": "0.2.0-rc.1",
-    "@bolt/tools-sassy-maps": "0.5.0-rc.1",
+    "@bolt/tools-px-to-rem": "^0.2.0-rc.3",
+    "@bolt/tools-sassy-maps": "^0.5.0-rc.3",
     "@bolt/tools-scrolling": "^0.6.0-rc.2",
     "@bolt/tools-spacing": "^0.5.0-rc.2",
     "@bolt/tools-strip-unit": "^0.5.0-rc.2",
