--- a/src/_patterns/01-core/02-tools/tools-font-family/package.json
+++ b/src/_patterns/01-core/02-tools/tools-font-family/package.json
@@ -35,8 +35,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-family": "0.7.0-rc.1",
-    "@bolt/tools-sassy-maps": "0.5.0-rc.1"
+    "@bolt/settings-font-family": "^0.7.0-rc.3",
+    "@bolt/tools-sassy-maps": "^0.5.0-rc.3"
   },
   "private": false
 }
