--- a/src/_patterns/01-core/02-tools/tools-font-size/package.json
+++ b/src/_patterns/01-core/02-tools/tools-font-size/package.json
@@ -37,8 +37,8 @@
   "dependencies": {
     "@bolt/settings-font-size": "^0.8.0-rc.3",
     "@bolt/tools-poly-fluid-sizing": "^0.2.0-rc.2",
-    "@bolt/tools-px-to-rem": "0.2.0-rc.1",
-    "@bolt/tools-sassy-maps": "0.5.0-rc.1"
+    "@bolt/tools-px-to-rem": "^0.2.0-rc.3",
+    "@bolt/tools-sassy-maps": "^0.5.0-rc.3"
   },
   "private": false
 }
