--- a/src/_patterns/01-core/02-tools/tools-poly-fluid-sizing/package.json
+++ b/src/_patterns/01-core/02-tools/tools-poly-fluid-sizing/package.json
@@ -36,11 +36,11 @@
   },
   "dependencies": {
     "@bolt/settings-font-size": "^0.8.0-rc.3",
-    "@bolt/tools-breakpoint": "0.2.0-rc.1",
+    "@bolt/tools-breakpoint": "^0.2.0-rc.3",
     "@bolt/tools-linear-interpolation": "^0.2.0-rc.2",
     "@bolt/tools-list-remove": "^0.2.0-rc.2",
     "@bolt/tools-list-sort": "^0.2.0-rc.2",
     "@bolt/tools-map-sort": "^0.2.0-rc.2",
-    "@bolt/tools-sassy-maps": "0.5.0-rc.1"
+    "@bolt/tools-sassy-maps": "^0.5.0-rc.3"
   }
 }
