--- a/src/_patterns/01-core/02-tools/tools-spacing/package.json
+++ b/src/_patterns/01-core/02-tools/tools-spacing/package.json
@@ -34,8 +34,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-spacing": "0.7.0-rc.1",
-    "@bolt/tools-export-data": "0.6.0-rc.1",
+    "@bolt/settings-spacing": "^0.7.0-rc.3",
+    "@bolt/tools-export-data": "^0.6.0-rc.3",
     "@bolt/tools-strip-unit": "^0.5.0-rc.2"
   }
 }
