--- a/src/_patterns/01-core/03-generic/generic-shared/package.json
+++ b/src/_patterns/01-core/03-generic/generic-shared/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
   "dependencies": {
-    "@bolt/settings-spacing": "0.7.0-rc.1",
+    "@bolt/settings-spacing": "^0.7.0-rc.3",
     "@bolt/tools-spacing": "^0.5.0-rc.2"
   },
   "style": "_generic.shared.scss",
