--- a/src/_patterns/01-core/05-objects/bolt-wrapper-object/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-wrapper-object/package.json
@@ -39,7 +39,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-breakpoints": "0.7.0-rc.0",
+    "@bolt/settings-breakpoints": "^0.7.0-rc.3",
     "@bolt/tools-spacing": "^0.5.0-rc.2"
   }
 }
