--- a/src/_patterns/01-core/07-utilities/utilities-visuallyhidden/package.json
+++ b/src/_patterns/01-core/07-utilities/utilities-visuallyhidden/package.json
@@ -35,6 +35,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-visuallyhidden": "0.6.0-rc.0"
+    "@bolt/tools-visuallyhidden": "^0.6.0-rc.2"
   }
 }
