--- a/src/_patterns/02-components/bolt-critical-fonts/package.json
+++ b/src/_patterns/02-components/bolt-critical-fonts/package.json
@@ -22,7 +22,7 @@
     "@bolt/elements-headings": "^0.4.0-rc.2",
     "@bolt/elements-page": "^0.5.0-rc.2",
     "@bolt/generic-all": "^0.5.0-rc.2",
-    "@bolt/settings-all": "0.7.0-rc.1",
+    "@bolt/settings-all": "^0.7.0-rc.3",
     "@bolt/tools-all": "^0.5.0-rc.2",
     "fontfaceobserver": "^2.0.13"
   },
