--- a/src/_patterns/02-components/bolt-headline/package.json
+++ b/src/_patterns/02-components/bolt-headline/package.json
@@ -31,6 +31,6 @@
     "@bolt/tools-font-size": "^0.5.0-rc.2",
     "@bolt/tools-font-weight": "^0.5.0-rc.2",
     "@bolt/tools-spacing": "^0.5.0-rc.2",
-    "@bolt/tools-uppercase": "0.2.0-rc.0"
+    "@bolt/tools-uppercase": "^0.2.0-rc.2"
   }
 }
