--- a/src/_patterns/02-components/bolt-logo/package.json
+++ b/src/_patterns/02-components/bolt-logo/package.json
@@ -40,7 +40,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "0.6.0-rc.0",
+    "@bolt/objects-ratio": "^0.6.0-rc.2",
     "@bolt/tools-spacing": "^0.5.0-rc.2"
   }
 }
