--- a/src/_patterns/02-components/bolt-unordered-list/package.json
+++ b/src/_patterns/02-components/bolt-unordered-list/package.json
@@ -38,7 +38,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-colors": "0.6.0-rc.0",
+    "@bolt/settings-colors": "^0.6.0-rc.0",
     "@bolt/tools-color-palette": "^0.5.0-rc.3",
     "@bolt/tools-spacing": "^0.5.0-rc.2"
   }
