WIP: blockquote options

--- a/bolt-manifest.json
+++ b/bolt-manifest.json
@@ -1,7 +1,9 @@
 {
   "name": "Bolt Manifest",
   "./bolt-website/scripts/bolt-app.js": "/./bolt-website/scripts/bolt-app.min.js",
-  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.min.css?5219c744b306af8edc41-be2777cdd594034f0f58-ce0c0db4d26119602c0dfd201344b3b9-./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts",
-  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css.map": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.min.css.map?5219c744b306af8edc41-be2777cdd594034f0f58-ce0c0db4d26119602c0dfd201344b3b9-./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts",
-  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.js": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.min.js"
+  "./bolt-website/scripts/bolt-app.js.map": "/./bolt-website/scripts/bolt-app.min.js.map",
+  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css?857b13868dc6675fa0e1-be2777cdd594034f0f58-773d971bb0085751e75e8e33c2dacb20-./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts",
+  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css.map": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.css.map?857b13868dc6675fa0e1-be2777cdd594034f0f58-773d971bb0085751e75e8e33c2dacb20-./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts",
+  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.js": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.min.js",
+  "./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.js.map": "/./src/_patterns/02-components/bolt-critical-fonts/dist/critical-fonts.min.js.map"
 }
