feat: major overhaul of theming engine -- cleanup needed but much more consolidated for easier maintainability

--- a/config/config.yml
+++ b/config/config.yml
@@ -49,7 +49,7 @@ lineageMatch: >-
   |\()[&quot;\&#039;]([\/.@A-Za-z0-9-_]+)[&quot;\&#039;]([\s\S+]*?)%}
 lineageMatchKey: 3
 patternExtension: twig
-twigDebug: false
+twigDebug: true
 twigAutoescape: false
 twigDefaultDateFormat: ''
 twigDefaultIntervalFormat: ''
@@ -122,6 +122,7 @@ plugins:
           - src/_patterns/02-components/bolt-unordered-list/src
           - src/_patterns/03-templates/default
           - src/_patterns/04-pages/bolt-homepage
+          - src/_patterns/04-pages/bolt-theming-qa
           - src/_patterns/04-pages/d8-homepage
           - src/_patterns/04-pages/d8-resource-details
     roots: {}
