--- a/src/_patterns/01-core/06-themes/themes-all/package.json
+++ b/src/_patterns/01-core/06-themes/themes-all/package.json
@@ -33,5 +33,15 @@
   "style": "_themes.all.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/themes-xdark": "^0.0.0",
+    "@bolt/themes-dark": "^0.0.0",
+    "@bolt/themes-light": "^0.0.0",
+    "@bolt/themes-xlight": "^0.0.0",
+    "@bolt/themes-success": "^0.0.0",
+    "@bolt/themes-warning": "^0.0.0",
+    "@bolt/themes-error": "^0.0.0",
+    "@bolt/themes-notice": "^0.0.0"
   }
 }
