--- a/src/_patterns/02-components/bolt-icon/package.json
+++ b/src/_patterns/02-components/bolt-icon/package.json
@@ -34,7 +34,8 @@
     "@webcomponents/webcomponents-platform": "^1.0.0",
     "@webcomponents/webcomponentsjs": "^1.0.14",
     "core-js": "^2.5.1",
-    "npm-run-all": "^4.0.2"
+    "npm-run-all": "^4.0.2",
+    "skatejs": "^5.0.0-beta.3"
   },
   "devDependencies": {
     "@bolt/build-webpack": "^0.3.0-rc.4"
