--- a/build-tools/gulp-tasks/build-webpack/package.json
+++ b/build-tools/gulp-tasks/build-webpack/package.json
@@ -22,6 +22,8 @@
 		}
 	],
 	"dependencies": {
+		"typescript": "^2.5.3",
+		"awesome-typescript-loader": "^3.2.3",
 		"babel-plugin-transform-builtin-classes": "^0.4.0",
 		"babel-plugin-transform-builtin-extend": "^1.1.2",
 		"babel-plugin-transform-class-properties": "^6.24.1",
