--- a/src/_patterns/02-components/bolt-card/package.json
+++ b/src/_patterns/02-components/bolt-card/package.json
@@ -32,13 +32,33 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/card.scss",
-  "twig": "src/card.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-color-palette": "^0.5.0-rc.4",
-    "@bolt/tools-spacing": "^0.5.0-rc.3"
+    "@bolt/tools-all": "^0.5.0-rc.3",
+    "@bolt/settings-spacing": "^0.7.0-rc.4",
+    "@bolt/core": "^0.0.1-rc.4",
+    "@webcomponents/custom-elements": "^1.0.4",
+    "@webcomponents/shadycss": "^1.0.6",
+    "@webcomponents/shadydom": "^1.0.6",
+    "@webcomponents/template": "^1.1.0",
+    "@webcomponents/webcomponents-platform": "^1.0.0",
+    "@webcomponents/webcomponentsjs": "^1.0.14",
+    "core-js": "^2.5.1",
+    "npm-run-all": "^4.0.2",
+    "skatejs": "^5.0.0-beta.3"
+  },
+  "devDependencies": {
+    "@bolt/build-webpack": "^0.3.0-rc.4"
+  },
+  "main": "dist/bolt-card.min.js",
+  "style": "src/card.scss",
+  "twig": "src/card.twig",
+  "scripts": {
+    "prepublishOnly": "npm run build",
+    "build": "npm-run-all --parallel build:*",
+    "build:bolt": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/card --output-filename='bolt-card.min.js' --output-public-path /scripts/",
+    "build:wwwd8": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/card --output-filename='bolt-card.wwwd8.min.js' --output-public-path /themes/custom/pegawww_theme/node_modules/@bolt/components-card/dist/"
   }
 }
