--- a/src/_patterns/02-components/bolt-critical-fonts/package.json
+++ b/src/_patterns/02-components/bolt-critical-fonts/package.json
@@ -19,6 +19,7 @@
     "@bolt/build-webpack": "^0.3.0-rc.4"
   },
   "dependencies": {
+    "@bolt/components-headline": "^0.5.0-rc.2",
     "@bolt/elements-headings": "^0.4.0-rc.3",
     "@bolt/elements-page": "^0.5.0-rc.3",
     "@bolt/generic-all": "^0.5.0-rc.3",
