--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
     "@bolt/components-all": "^0.5.0-rc.2",
     "@bolt/components-critical-fonts": "^0.4.0-rc.3",
     "@bolt/components-icon": "^0.1.0-rc.4",
+    "@bolt/components-card": "^0.5.0-rc.2",
     "@bolt/components-image": "^0.2.0-rc.3",
     "@bolt/elements-all": "^0.5.0-rc.2",
     "@bolt/generic-all": "^0.5.0-rc.3",
