fix: ui list and breakpoints updates

--- a/src/_patterns/01-core/05-objects/bolt-ui-list-object/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-ui-list-object/package.json
@@ -39,6 +39,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@bolt/settings-global": "^0.7.0-rc.4",
     "@bolt/tools-spacing": "^0.5.0-rc.3"
   }
 }
