--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,6 @@
     },
     "repositories": [
       {
-        "type": "vcs",
-        "url": "https://github.com/pattern-lab/patternengine-php-twig",
-        "no-api": true
-      },
-      {
         "type": "path",
         "url": "packages/bolt-twig-extensions"
       },
@@ -47,10 +42,9 @@
     "minimum-stability": "dev",
     "require": {
       "php": ">=7.0",
-      "twig/twig": "^1.35.0",
       "cweagans/composer-patches": "~1.0",
       "pattern-lab/core": "^2.8.10",
-      "pattern-lab/patternengine-twig": "^2.1.3",
+      "pattern-lab/patternengine-twig": "*",
       "pattern-lab/styleguidekit-twig-default": "^3.0.0",
       "pattern-lab/styleguidekit-assets-default": "*",
       "evanlovely/plugin-twig-namespaces": "dev-master",
