--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "babel-types": "^6.24.1",
     "babylon": "^6.16.1",
     "backstopjs": "^3.0.31",
+    "browser-sync": "^2.18.13",
     "camel-case": "^3.0.0",
     "chai": "^4.1.0",
     "chai-fs": "^1.0.0",
@@ -135,12 +136,14 @@
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.3.2",
     "eslint-plugin-import": "^2.7.0",
+    "extend": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "feature-toggle": "^0.3.0",
     "flatten-packages": "^0.1.4",
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "globby": "^6.1.0",
+    "gulp-connect-php": "^1.0.1",
     "gulp-util": "^3.0.8",
     "http-server": "^0.10.0",
     "husky": "^0.14.3",
@@ -169,6 +172,7 @@
     "pre-commit": "^1.2.2",
     "precommit": "^1.2.2",
     "prettier-eslint-cli": "^4.2.1",
+    "pretty": "^2.0.0",
     "publish-please": "^2.3.1",
     "read-pkg-up": "^2.0.0",
     "recast": "^0.12.7",
@@ -187,8 +191,10 @@
     "stylefmt": "^6.0.0",
     "stylelint": "^8.0.0",
     "stylelint-scss": "^2.0.1",
+    "superagent": "^3.8.0",
     "svg-injector": "^1.1.3",
     "svg-loader": "^0.0.2",
+    "sync-request": "^4.1.0",
     "text-loader": "^0.0.1",
     "to-string-loader": "^1.1.5",
     "touch": "^3.1.0",
