fix: bug fixes for video player, inline lists, minification issues w/ the prod JS build, theming fixes for ordered and unordered lists.

--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -13,7 +13,7 @@
     "@skatejs/renderer-preact": "^0.1.0",
     "@webcomponents/custom-elements": "^1.0.4",
     "@webcomponents/shadycss": "^1.0.6",
-    "@webcomponents/shadydom": "^1.0.6",
+    "@webcomponents/shadydom": "bolt-design-system/shadydom#hotfix/fix-text-undefined-IE11",
     "@webcomponents/template": "^1.1.0",
     "@webcomponents/webcomponents-platform": "^1.0.0",
     "@webcomponents/webcomponentsjs": "^1.0.14",
