--- a/src/_patterns/02-components/bolt-icon/package.json
+++ b/src/_patterns/02-components/bolt-icon/package.json
@@ -29,7 +29,7 @@
     "@bolt/core": "^0.0.1-rc.9",
     "@webcomponents/custom-elements": "^1.0.4",
     "@webcomponents/shadycss": "^1.0.6",
-    "@webcomponents/shadydom": "webcomponents/shadydom#fix-innerhtml-193",
+    "@webcomponents/shadydom": "bolt-design-system/shadydom#hotfix/fix-text-undefined-IE11",
     "@webcomponents/template": "^1.1.0",
     "@webcomponents/webcomponents-platform": "^1.0.0",
     "@webcomponents/webcomponentsjs": "^1.0.14",
