--- a/build-tools/gulp-tasks/build-webpack/package.json
+++ b/build-tools/gulp-tasks/build-webpack/package.json
@@ -50,7 +50,7 @@
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.18.2",
 		"typescript": "^2.5.3",
-		"uglifyjs-webpack-plugin": "^1.0.0",
+		"uglifyjs-webpack-plugin": "1.0.0",
 		"webpack": "^3.8.1",
 		"webpack-concat-plugin": "^1.4.1",
 		"webpack-dev-server": "^2.9.1",
