--- a/build-tools/gulp-tasks/package.json
+++ b/build-tools/gulp-tasks/package.json
@@ -35,7 +35,8 @@
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^3.1.0",
     "gulp-changed-in-place": "^2.2.0",
-    "gulp-remember": "^0.3.1"
+    "gulp-remember": "^0.3.1",
+    "gulp": "gulpjs/gulp#4.0"
   },
   "publishConfig": {
     "access": "public"
