--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "webpack-dev-server": "^2.9.1",
     "webpack-manifest-plugin": "^1.3.2",
     "workbox-webpack-plugin": "^2.1.0",
+    "gulp": "gulpjs/gulp#4.0",
     "xo": "^0.18.2"
   },
   "snyk": true,
