chore: fixing package versions in build tools; moving config presets over to packages folder.

--- a/build-tools/gulp-tasks/build-styles/package.json
+++ b/build-tools/gulp-tasks/build-styles/package.json
@@ -22,7 +22,7 @@
 		}
 	],
 	"dependencies": {
-		"@bolt/build-core": "0.4.0-alpha.4",
+		"@bolt/build-core": "^0.4.0-rc.15",
 		"autoprefixer": "^7.1.4",
 		"browserslist": "github:ai/browserslist",
 		"chai": "^4.1.0",
