--- a/lerna.json
+++ b/lerna.json
@@ -15,8 +15,12 @@
   },
   "packages": [
     "packages/**",
+    "src/fonts",
+    "src/_data",
+    "src/fonts",
     "src",
-    "src/**/*",
+    "src/_patterns/**/*",
+    "build-tools/gulp-tasks/",
     "build-tools/gulp-tasks/build-core",
     "build-tools/gulp-tasks/build-icons",
     "build-tools/gulp-tasks/build-images",
