--- a/build-tools/gulp-tasks/build-images/package.json
+++ b/build-tools/gulp-tasks/build-images/package.json
@@ -24,7 +24,7 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "0.4.0-alpha.4",
+    "@bolt/build-core": "^0.4.0-rc.15",
     "@bolt/common": "^0.1.0-alpha.7364ffc9",
     "async": "^2.5.0",
     "gm": "^1.23.0",
