--- a/build-tools/gulp-tasks/build-patternlab/package.json
+++ b/build-tools/gulp-tasks/build-patternlab/package.json
@@ -22,7 +22,7 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "0.4.0-alpha.4",
+    "@bolt/build-core": "^0.4.0-rc.15",
     "@bolt/build-symlinks": "^0.5.0-rc.14",
     "child_process": "^1.0.2",
     "debug": "^2.6.8",
