--- a/build-tools/gulp-tasks/build-server/package.json
+++ b/build-tools/gulp-tasks/build-server/package.json
@@ -26,7 +26,7 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/build-core": "0.4.0-alpha.4",
+		"@bolt/build-core": "^0.4.0-rc.15",
 		"browser-sync": "^2.18.12",
 		"bs-html-injector": "^3.0.3",
 		"debug": "^2.6.8",
