--- a/build-tools/gulp-tasks/build-symlinks/package.json
+++ b/build-tools/gulp-tasks/build-symlinks/package.json
@@ -24,7 +24,7 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "0.4.0-alpha.4",
+    "@bolt/build-core": "^0.4.0-rc.15",
     "cosmiconfig": "^3.1.0",
     "del-symlinks": "^0.1.2",
     "fs": "0.0.1-security",
