--- a/build-tools/gulp-tasks/package.json
+++ b/build-tools/gulp-tasks/package.json
@@ -23,15 +23,14 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "^0.4.0-alpha.f4009816",
-    "@bolt/build-jekyll": "^0.2.0",
-    "@bolt/build-lerna": "^0.2.0",
-    "@bolt/build-patternlab": "^0.3.0",
-    "@bolt/build-server": "^0.2.0",
-    "@bolt/build-slack": "^0.3.0",
-    "@bolt/build-styles": "^0.4.0-alpha.649a2b68",
-    "@bolt/build-symlinks": "^0.3.0",
-    "@bolt/build-webpack": "^0.3.0-rc.2",
+    "@bolt/build-core": "^0.4.0-rc.15",
+    "@bolt/build-patternlab": "^0.5.0-rc.14",
+    "@bolt/build-server": "^0.4.0-rc.14",
+    "@bolt/build-slack": "^0.5.0-rc.12",
+    "@bolt/build-styles": "^0.5.0-rc.14",
+    "@bolt/build-symlinks": "^0.5.0-rc.14",
+    "@bolt/build-webpack": "^0.3.0-rc.16",
+    "@bolt/build-images": "^0.1.0-rc.14",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^3.1.0",
     "gulp-changed-in-place": "^2.2.0",
