chore: adding manual test to check if the version of a particular package already was published to npm, avoiding publishign hell.

--- a/build-tools/gulp-tasks/build-symlinks/package.json
+++ b/build-tools/gulp-tasks/build-symlinks/package.json
@@ -34,6 +34,8 @@
     "js-yaml": "^3.9.1",
     "merge": "^1.2.0",
     "path": "^0.12.7",
+    "pkg-versions": "^1.1.0",
+    "pretty-print": "^1.1.0",
     "vinyl-fs": "^2.4.4"
   },
   "publishConfig": {
