--- a/src/_patterns/02-components/bolt-accordion/package.json
+++ b/src/_patterns/02-components/bolt-accordion/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1-alpha.4",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -24,5 +24,6 @@
   "publishConfig": {
     "access": "public"
   },
+  "private": true,
   "main": "src/accordion.js"
 }
