--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "chai-fs": "^1.0.0",
     "chokidar": "^1.7.0",
     "clean-css-loader": "^0.1.3",
+    "commander": "^2.11.0",
     "concurrently": "^3.5.0",
     "core-js": "^2.5.1",
     "css-loader": "^0.28.7",
