--- a/src/_patterns/01-core/06-themes/states/themes-success/package.json
+++ b/src/_patterns/01-core/06-themes/states/themes-success/package.json
@@ -8,7 +8,7 @@
     "design system",
     "themes"
   ],
-  "version": "0.0.1-alpha.4",
+  "version": "0.0.1",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
