--- a/src/_patterns/01-core/06-themes/themes-all/package.json
+++ b/src/_patterns/01-core/06-themes/themes-all/package.json
@@ -8,7 +8,7 @@
     "design system",
     "themes"
   ],
-  "version": "0.5.0",
+  "version": "0.5.1",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,11 +36,11 @@
   },
   "dependencies": {
     "@bolt/themes-dark": "^0.1.0",
-    "@bolt/themes-error": "^0.0.1-alpha.4",
+    "@bolt/themes-error": "^0.0.1",
     "@bolt/themes-light": "^0.1.0",
-    "@bolt/themes-notice": "^0.0.1-alpha.4",
-    "@bolt/themes-success": "^0.0.1-alpha.4",
-    "@bolt/themes-warning": "^0.0.1-alpha.4",
+    "@bolt/themes-notice": "^0.0.1",
+    "@bolt/themes-success": "^0.0.1",
+    "@bolt/themes-warning": "^0.0.1",
     "@bolt/themes-xdark": "^0.1.0",
     "@bolt/themes-xlight": "^0.1.0"
   }
