--- a/build-tools/gulp-tasks/build-webpack/package.json
+++ b/build-tools/gulp-tasks/build-webpack/package.json
@@ -27,6 +27,7 @@
 		"babel-plugin-transform-builtin-extend": "^1.1.2",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-custom-element-classes": "^0.1.0",
+		"babel-plugin-transform-decorators": "^6.24.1",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"babel-plugin-transform-es2015-spread": "^6.22.0",
 		"babel-plugin-transform-object-assign": "^6.8.0",
@@ -49,6 +50,7 @@
 		"npm-sass": "^2.2.1",
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.18.2",
+		"ts-loader": "^3.1.1",
 		"typescript": "^2.5.3",
 		"uglifyjs-webpack-plugin": "1.0.0",
 		"webpack": "^3.8.1",
