--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -3,7 +3,7 @@
   "patternName": "button",
   "patternType": "components",
   "patternSubType": "buttons",
-  "style": "src/_button.scss",
+  "style": "src/button.scss",
   "main": "src/button.js",
   "templates": {
     "button": {
@@ -33,5 +33,20 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/settings-spacing": "^0.7.0",
+    "@bolt/tools-all": "^0.5.0",
+    "@bolt/core": "^0.2.1",
+    "@bolt/core-common": "^0.0.0",
+    "@webcomponents/custom-elements": "^1.0.4",
+    "@webcomponents/shadycss": "^1.0.6",
+    "@webcomponents/shadydom": "bolt-design-system/shadydom#hotfix/fix-text-undefined-IE11",
+    "@webcomponents/template": "^1.1.0",
+    "@webcomponents/webcomponents-platform": "^1.0.0",
+    "@webcomponents/webcomponentsjs": "^1.0.14",
+    "core-js": "^2.5.1",
+    "npm-run-all": "^4.0.2",
+    "skatejs": "^5.0.0-beta.3"
   }
 }
