--- a/src/package.json
+++ b/src/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@bolt/components-all": "^0.5.1",
+    "@bolt/core": "^0.1.0",
     "@bolt/components-card": "^0.5.0",
+    "@bolt/components-button": "^0.6.0",
     "@bolt/components-critical-fonts": "^0.4.0",
     "@bolt/components-icon": "^0.1.0",
     "@bolt/components-image": "^0.2.0",
