Additional style options for blockquote component (#179)
* WIP: blockquote options

* WIP: updated border and alignments

* WIP: adding vertical border option

* WIP: logo and image

* WIP: author image

* styles: logo and image

* styles: latest design

* docs: commenting on twig and scss files

* styles: logo invert fix

* docs: blockquote documentation

* fix: doc copy fix

--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "globby": "^6.1.0",
+    "gulp": "gulpjs/gulp#4.0",
     "gulp-util": "^3.0.8",
     "http-server": "^0.10.0",
     "husky": "^0.14.3",
