WIP: stashing latest

--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "lerna": "2.5.1",
   "version": "independent",
   "packages": [
-    "packages/**",
+    "packages/**/*",
     "src/fonts",
     "src/_data",
     "src",
