--- a/src/_patterns/01-core/06-themes/themes-all/package.json
+++ b/src/_patterns/01-core/06-themes/themes-all/package.json
@@ -30,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "_themes.all.scss",
+  "style": "_themes-all.scss",
   "publishConfig": {
     "access": "public"
   },
