--- a/src/_patterns/01-core/06-themes/general/themes-light/package.json
+++ b/src/_patterns/01-core/06-themes/general/themes-light/package.json
@@ -33,5 +33,9 @@
   "style": "_themes.light.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/settings-spacing": "^0.7.0",
+    "@bolt/tools-all": "^0.5.0"
   }
 }
