--- a/src/_patterns/01-core/06-themes/states/themes-notice/package.json
+++ b/src/_patterns/01-core/06-themes/states/themes-notice/package.json
@@ -34,5 +34,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@bolt/settings-spacing": "^0.7.0",
+    "@bolt/tools-all": "^0.5.0"
+  },
   "private": true
 }
