fix: bug fixes and cleanup for the button theming override, eyebrow icon size; added headline quotes + icon backgrounds

--- a/lerna.json
+++ b/lerna.json
@@ -21,6 +21,9 @@
   "command": {
     "publish": {
       "allowBranch": "!feature/*"
+    },
+    "bootstrap": {
+      "hoist": true
     }
   }
 }
