--- a/src/_patterns/02-components/bolt-icon/package.json
+++ b/src/_patterns/02-components/bolt-icon/package.json
@@ -26,7 +26,9 @@
   },
   "dependencies": {
     "@bolt/components-icons": "^0.1.0",
-    "@bolt/core": "^0.1.0",
+    "@bolt/core": "^0.2.1",
+    "@bolt/settings-all": "^0.7.0",
+    "@bolt/tools-all": "^0.5.0",
     "@webcomponents/custom-elements": "^1.0.4",
     "@webcomponents/shadycss": "^1.0.6",
     "@webcomponents/shadydom": "bolt-design-system/shadydom#hotfix/fix-text-undefined-IE11",
@@ -35,6 +37,8 @@
     "@webcomponents/webcomponentsjs": "^1.0.14",
     "core-js": "^2.5.1",
     "npm-run-all": "^4.0.2",
+    "preact": "^8.2.6",
+    "@skatejs/renderer-preact": "^0.1.0",
     "skatejs": "^5.0.0-beta.3"
   },
   "devDependencies": {
