--- a/src/_patterns/02-components/bolt-icons/package.json
+++ b/src/_patterns/02-components/bolt-icons/package.json
@@ -44,6 +44,7 @@
     "ncp": "^2.0.0",
     "path": "^0.12.7",
     "prettier": "^1.7.4",
+    "preact": "^8.2.6",
     "svgo": "^0.7.2",
     "uppercamelcase": "^3.0.0"
   },
