--- a/build-tools/gulp-tasks/build-webpack/package.json
+++ b/build-tools/gulp-tasks/build-webpack/package.json
@@ -32,8 +32,12 @@
 		"babel-plugin-transform-object-assign": "^6.8.0",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-plugin-transform-react-jsx": "^6.24.1",
-		"babel-preset-env": "^1.6.0",
+		"babel-plugin-transform-skate-flow-props": "^0.1.0",
 		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-es2016": "^6.24.1",
+		"babel-preset-es2017": "^6.24.1",
+		"babel-preset-flow": "^6.23.0",
 		"babel-preset-stage-0": "^6.24.1",
 		"babel-traverse": "^6.26.0",
 		"babel-types": "^6.24.1",
