Bolt v0.4.1: Bug Fixes, Minor Cleanup, New Blockquote Component Options; Icon Backgrounds Added (#180)
* Additional style options for blockquote component (#179)

* WIP: blockquote options

* WIP: updated border and alignments

* WIP: adding vertical border option

* WIP: logo and image

* WIP: author image

* styles: logo and image

* styles: latest design

* docs: commenting on twig and scss files

* styles: logo invert fix

* docs: blockquote documentation

* fix: doc copy fix

* fix: bug fixes and cleanup for the button theming override, eyebrow icon size; added headline quotes + icon backgrounds

* chore: adding updated bolt manifest

* Publish

 - @bolt/components-blockquote@0.2.0

* chore: version bump

--- a/config/config.yml
+++ b/config/config.yml
@@ -4,21 +4,13 @@ ie:
   - DS_Store
   - less
   - scss
-  - js
-  - svg
-  - scss
-  - css
 id:
   - scss
   - .svn
   - .sass-cache
   - scripts
   - styles
-  - node_modules
-  - images
-  - assets
 cleanPublic: false
-moveStatic: true
 patternStates:
   - inprogress
   - inreview
@@ -116,6 +108,7 @@ plugins:
           - src/_patterns/02-components/bolt-ordered-list/src
           - src/_patterns/02-components/bolt-page-footer/lib
           - src/_patterns/02-components/bolt-page-footer/src
+          - src/_patterns/02-components/bolt-page-header/src
           - src/_patterns/02-components/bolt-quote
           - src/_patterns/02-components/bolt-teaser/src
           - src/_patterns/02-components/bolt-unordered-list/demo/theming
