--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bolt",
-  "version": "0.4.0-rc.0",
+  "version": "0.4.0",
   "description": "Pega Digital Design System",
   "private": true,
   "files": [
@@ -109,8 +109,8 @@
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-skate-flow-props": "^0.0.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-plugin-transform-skate-flow-props": "^0.1.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-traverse": "^6.26.0",
@@ -141,6 +141,7 @@
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "globby": "^6.1.0",
+    "gulp": "gulpjs/gulp#4.0",
     "gulp-util": "^3.0.8",
     "http-server": "^0.10.0",
     "husky": "^0.14.3",
