--- a/config/config.yml
+++ b/config/config.yml
@@ -117,6 +117,7 @@ plugins:
           - src/_patterns/04-pages/bolt-homepage
           - src/_patterns/04-pages/bolt-theming-qa
           - src/_patterns/04-pages/d8-homepage
+          - src/_patterns/04-pages/d8-product-landing
           - src/_patterns/04-pages/d8-resource-details
     roots: {}
 ishMinimum: '240'
