chore: navbar setup

--- a/config/config.yml
+++ b/config/config.yml
@@ -104,6 +104,7 @@ plugins:
           - src/_patterns/02-components/bolt-image/src
           - src/_patterns/02-components/bolt-link/src
           - src/_patterns/02-components/bolt-logo/src
+          - src/_patterns/02-components/bolt-navbar/src
           - src/_patterns/02-components/bolt-ordered-list/demo/theming
           - src/_patterns/02-components/bolt-ordered-list/src
           - src/_patterns/02-components/bolt-page-footer/lib
