--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -56,6 +56,7 @@
 		"@bolt/components-page-footer": "^0.4.0",
 		"@bolt/components-site": "^0.5.0",
 		"@bolt/components-teaser": "^0.2.0",
+		"@bolt/components-navbar": "^0.0.0",
 		"@bolt/components-unordered-list": "^0.1.0"
 	}
 }
