WIP: polishing up 1st of 2 product landing pages

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -185,6 +185,10 @@ d8_homepage_video_test:
   filename: d8-homepage-video-test.twig
   path: src/_patterns/04-pages/d8-homepage/d8-homepage-video-test.twig
   namespace: '@bolt/d8-homepage-video-test.twig'
+d8_product_landing:
+  filename: d8-product-landing.twig
+  path: src/_patterns/04-pages/d8-product-landing/d8-product-landing.twig
+  namespace: '@bolt/d8-product-landing.twig'
 d8_resource_details:
   filename: d8-resource-details.twig
   path: src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
