--- a/config/config.yml
+++ b/config/config.yml
@@ -41,7 +41,7 @@ lineageMatch: >-
   |\()[&quot;\&#039;]([\/.@A-Za-z0-9-_]+)[&quot;\&#039;]([\s\S+]*?)%}
 lineageMatchKey: 3
 patternExtension: twig
-twigDebug: false
+twigDebug: true
 twigAutoescape: false
 twigDefaultDateFormat: ''
 twigDefaultIntervalFormat: ''
@@ -97,6 +97,7 @@ plugins:
           - src/_patterns/02-components/bolt-card/src
           - src/_patterns/02-components/bolt-chip-list
           - src/_patterns/02-components/bolt-chip/src
+          - src/_patterns/02-components/bolt-figure/src
           - src/_patterns/02-components/bolt-headline/demo
           - src/_patterns/02-components/bolt-headline/demo/h1-through-h6
           - src/_patterns/02-components/bolt-headline/src
