--- a/src/_patterns/01-core/05-objects/bolt-flag-object/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-flag-object/package.json
@@ -30,7 +30,8 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/flag.scss",
+  "style": "src/_flag.scss",
+  "twig": "src/flag.twig",
   "publishConfig": {
     "access": "public"
   },
