--- a/src/_patterns/02-components/bolt-icon/package.json
+++ b/src/_patterns/02-components/bolt-icon/package.json
@@ -29,6 +29,7 @@
     "@bolt/core": "^0.3.0",
     "@bolt/settings-all": "^0.7.2",
     "@bolt/tools-all": "^0.5.2",
+    "@bolt/themes-all": "^0.5.2",
     "@skatejs/renderer-preact": "^0.1.0",
     "@webcomponents/custom-elements": "^1.0.4",
     "@webcomponents/shadycss": "^1.0.6",
