--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -47,6 +47,7 @@
 		"@bolt/components-color-swatch": "^0.5.0",
 		"@bolt/components-critical-fonts": "^0.4.2",
 		"@bolt/components-critical-path": "^0.2.0",
+		"@bolt/components-figure": "^0.0.0",
 		"@bolt/components-headline": "^0.6.1",
 		"@bolt/components-icon": "^0.2.1",
 		"@bolt/components-icons": "^0.1.1",
