--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -34,6 +34,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
+	"private": true,
 	"dependencies": {
 		"@bolt/components-action-blocks": "^0.3.0",
 		"@bolt/components-background": "^0.2.2",
