WIP: navbar items interactive styles

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -286,6 +286,10 @@ logo:
   filename: logo.twig
   path: src/_patterns/02-components/bolt-logo/src/logo.twig
   namespace: '@bolt/logo.twig'
+navbar:
+  filename: navbar.twig
+  path: src/_patterns/02-components/bolt-navbar/src/navbar.twig
+  namespace: '@bolt/navbar.twig'
 ordered_list:
   filename: ordered-list.twig
   path: src/_patterns/02-components/bolt-ordered-list/src/ordered-list.twig
