--- a/build-tools/gulp-tasks/package.json
+++ b/build-tools/gulp-tasks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-tools",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "license": "MIT",
   "description": "Curated collection of front-end build tools in the Bolt Design System.",
   "main": "index.js",
@@ -35,8 +35,7 @@
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^3.1.0",
     "gulp-changed-in-place": "^2.2.0",
-    "gulp-remember": "^0.3.1",
-    "gulp": "gulpjs/gulp#4.0"
+    "gulp-remember": "^0.3.1"
   },
   "publishConfig": {
     "access": "public"
